--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=taskify
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=none
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
@@ -13,4 +13,4 @@ spring.liquibase.default-schema=public
 spring.liquibase.database-change-log-table=dbchangelog
 spring.liquibase.database-change-log-lock-table=dbchangeloglock
 
-server.port=9090
+server.port=8090
