security: add security feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.liquibase.default-schema=public
 spring.liquibase.database-change-log-table=dbchangelog
 spring.liquibase.database-change-log-lock-table=dbchangeloglock
 
+jwt.expiry=3600
+jwt.secret=temporarysecretkey
+
 server.port=8090
